--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GL_FN_Ads</string>
+    <string name="app_name">IN_GL_FN_Ads</string>
     <string name="GPSAlertDialogTitle">Title</string>
     <string name="GPSAlertDialogMessage">Msg</string>
     <string name="action_settings">Settings</string>
